// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderPage renders only product list if nothing selected 1`] = `
<styled.div>
  <ProductList />
</styled.div>
`;

exports[`OrderPage renders product list if product selected 1`] = `
<styled.div>
  <ProductList />
  <Connect(Order) />
</styled.div>
`;
